collateral-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collateral-api-deployment
  labels:
    app: collateral-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collateral-api
  template:
    metadata:
      labels:
        app: collateral-api
    spec:
      containers:
      - name: collateral-api
        image: benzidarwin/collateral-sys-api:v1.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: collateral-api-service
spec:
  type: ClusterIP
  selector:
    app: collateral-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8008
