collateral-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collateral-web-deployment
  labels:
    app: collateral-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collateral-web
  template:
    metadata:
      labels:
        app: collateral-web
    spec:
      containers:
      - name: collateral-web
        image: benzidarwin/collateral-management-frontend:main-090cbc4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        
---
apiVersion: v1
kind: Service
metadata:
  name: collateral-web-service
spec:
  type: ClusterIP
  selector:
    app: collateral-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
