collateral-ingress.yaml
# --- INGRESS CLASS ---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/component: controller
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
# --- INGRESS RESOURCE ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collateral-ingress
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: collateral.local
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: collateral-api-service
            port:
              number: 8008
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collateral-web-service
            port:
              number: 3000
